--- a/index.html
+++ b/index.html
@@ -1054,23 +1054,27 @@
         
     </script>
 <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
 
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyDhzGgJ-Jjb6Ouztk2aV3WvPHimEJ1wagU",
-    authDomain: "jinmu-c0549.firebaseapp.com",
-    projectId: "jinmu-c0549",
-    storageBucket: "jinmu-c0549.firebasestorage.app",
-    messagingSenderId: "433198268542",
-    appId: "1:433198268542:web:e3a1bb8aedd22c4db8982f",
-    measurementId: "G-YHBMGP6C6X"
-  };
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyDhzGgJ-Jjb6Ouztk2aV3WvPHimEJ1wagU",
+  authDomain: "jinmu-c0549.firebaseapp.com",
+  projectId: "jinmu-c0549",
+  storageBucket: "jinmu-c0549.firebasestorage.app",
+  messagingSenderId: "433198268542",
+  appId: "1:433198268542:web:e3a1bb8aedd22c4db8982f",
+  measurementId: "G-YHBMGP6C6X"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
 
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
@@ -1078,3 +1082,4 @@
 </script>
 </body>
 </html>
+
