--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     <style>
-        @import url('https://share.google/koVk1caNak9naW2f4');
+        @import url('https://gd-hbimg-edge.huabanimg.com/aac0967a173065d1476e2d267f3724c8957044191969e8-6UW7td_fw1200?auth_key=1766332800-110c79413e7f4ebd825e50c5a9df0bc8-0-900838b741a27ef02ffb2d5a04d7815a');
         
        body {
     /* 图片地址 */
@@ -606,6 +606,7 @@
     </script>
 </body>
 </html>
+
 
 
 
