--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
        body {
     /* 图片地址 */
-    background-image: url('https://gss0.baidu.com/9vo3dSag_xI4khGko9WTAnF6hhy/zhidao/pic/item/503d269759ee3d6d1c88573945166d224e4adef2.jpg'); 
+    background-image: url('https://gd-hbimg-edge.huabanimg.com/aac0967a173065d1476e2d267f3724c8957044191969e8-6UW7td_fw658webp?auth_key=1766332800-110c79413e7f4ebd825e50c5a9df0bc8-0-900838b741a27ef02ffb2d5a04d7815a'); 
     
     /* 核心设置：确保图片铺满且不重复 */
     background-size: cover;          /* 缩放背景图以完全覆盖背景区域 */
@@ -606,6 +606,7 @@
     </script>
 </body>
 </html>
+
 
 
 
