--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     <style>
-        @import url('https://gd-hbimg-edge.huabanimg.com/aac0967a173065d1476e2d267f3724c8957044191969e8-6UW7td_fw1200?auth_key=1766332800-110c79413e7f4ebd825e50c5a9df0bc8-0-900838b741a27ef02ffb2d5a04d7815a');
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
         
        body {
     /* 图片地址 */
-    background-image: url('https://gd-hbimg-edge.huabanimg.com/aac0967a173065d1476e2d267f3724c8957044191969e8-6UW7td_fw658webp?auth_key=1766332800-110c79413e7f4ebd825e50c5a9df0bc8-0-900838b741a27ef02ffb2d5a04d7815a'); 
+    background-image: url('https://gd-hbimg-edge.huabanimg.com/aac0967a173065d1476e2d267f3724c8957044191969e8-6UW7td_fw1200?auth_key=1766332800-110c79413e7f4ebd825e50c5a9df0bc8-0-900838b741a27ef02ffb2d5a04d7815a'); 
     
     /* 核心设置：确保图片铺满且不重复 */
     background-size: cover;          /* 缩放背景图以完全覆盖背景区域 */
@@ -606,6 +606,7 @@
     </script>
 </body>
 </html>
+
 
 
 
