--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
        body {
     /* 图片地址 */
-    background-image: url('https://img.mp.sohu.com/upload/20161006/743dfa69fe4f44f3aedd4b95d1c809f6_th.jpg'); 
+    background-image: url('https://gss0.baidu.com/9vo3dSag_xI4khGko9WTAnF6hhy/zhidao/pic/item/503d269759ee3d6d1c88573945166d224e4adef2.jpg'); 
     
     /* 核心设置：确保图片铺满且不重复 */
     background-size: cover;          /* 缩放背景图以完全覆盖背景区域 */
@@ -606,6 +606,7 @@
     </script>
 </body>
 </html>
+
 
 
 
