--- a/index.html
+++ b/index.html
@@ -11,22 +11,17 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
         
-       body {
-    /* 图片地址 */
-    background-image: url('images/bj.jpg'); 
-    
-    /* 核心设置：确保图片铺满且不重复 */
-    background-size: cover;          /* 缩放背景图以完全覆盖背景区域 */
-    background-position: center;      /* 图片居中显示 */
-    background-attachment: fixed;    /* 背景固定，不随页面滚动（视差效果） */
-    background-repeat: no-repeat;    /* 不重复平铺 */
+       html, body {
+  height: 100%;
+  margin: 0;
 }
-        /* 磨砂玻璃效果增强：为了让内容在复杂背景下更清晰 */
-        .component-bg { 
-            background-color: rgba(17, 17, 34, 0.85); 
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(45, 45, 76, 0.5); 
-        }
+        body {
+  background-image: url("images/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 
         .input-dark { background-color: rgba(5, 5, 10, 0.8) !important; border: 1px solid #3d3d5c !important; color: white !important; font-size: 14px !important; }
         .hidden-view { display: none !important; }
@@ -606,6 +601,7 @@
     </script>
 </body>
 </html>
+
 
 
 
