--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   margin: 0;
 }
         body {
-  background-image: url("images/bg.jpg");
+  background-image: url("images/bj.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -601,6 +601,7 @@
     </script>
 </body>
 </html>
+
 
 
 
