--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+         /* 磨砂玻璃效果增强：为了让内容在复杂背景下更清晰 */
+        .component-bg { 
+            background-color: rgba(17, 17, 34, 0.85); 
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(45, 45, 76, 0.5); 
+        }
+
+        .input-dark { background-color: rgba(5, 5, 10, 0.8) !important; border: 1px solid #3d3d5c !important; color: white !important; font-size: 14px !important; }
+        .hidden-view { display: none !important; }
 
         .input-dark { background-color: rgba(5, 5, 10, 0.8) !important; border: 1px solid #3d3d5c !important; color: white !important; font-size: 14px !important; }
         .hidden-view { display: none !important; }
@@ -601,6 +610,7 @@
     </script>
 </body>
 </html>
+
 
 
 
