--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
         
        html, body {
-  height: 100%;
-  margin: 0;
+           height: 100%;
+           margin: 0;
 }
         body {
-  background-image: url("images/bj.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+            background-image: url("images/bg.jpg");
+ 
+    /* 核心设置：确保图片铺满且不重复 */
+    background-size: cover;          /* 缩放背景图以完全覆盖背景区域 */
+    background-position: center;      /* 图片居中显示 */
+    background-attachment: fixed;    /* 背景固定，不随页面滚动（视差效果） */
+    background-repeat: no-repeat;    /* 不重复平铺 */
 }
-         /* 磨砂玻璃效果增强：为了让内容在复杂背景下更清晰 */
+        /* 磨砂玻璃效果增强：为了让内容在复杂背景下更清晰 */
         .component-bg { 
             background-color: rgba(17, 17, 34, 0.85); 
             backdrop-filter: blur(10px);
@@ -610,6 +612,7 @@
     </script>
 </body>
 </html>
+
 
 
 
