--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
         
         body {
-            background-image: url("images/bg.jpg");
+            background-image: url("images/bj.jpg");
  
     /* 核心设置：确保图片铺满且不重复 */
     background-size: cover;          /* 缩放背景图以完全覆盖背景区域 */
@@ -608,6 +608,7 @@
     </script>
 </body>
 </html>
+
 
 
 
