--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <div class="lg:col-span-8 xl:col-span-9 p-8 rounded-3xl component-bg shadow-2xl relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-64 h-64 bg-cyan-500/5 blur-[100px] pointer-events-none"></div>
                     <div class="flex justify-between items-center mb-8">
-                        <h3 class="text-xs text-cyan-400 font-black uppercase tracking-[0.25em]"><i class="fas fa-wave-square mr-3 text-cyan-500"></i>资金收益曲线>jiao
+                        <h3 class="text-sm font-black text-gray-400 uppercase tracking-[0.3em]"><i class="fas fa-wave-square mr-3 text-cyan-500"></i>资金收益曲线>jiao
                         <div id="curve-range-label" class="text-[10px] text-cyan-400 font-black bg-cyan-500/10 px-4 py-1.5 rounded-full border border-cyan-500/20">ALL TIME VISUALIZER</div>
                     </div>
                     <div class="h-[380px] w-full"><canvas id="equity-chart"></canvas></div>
@@ -608,6 +608,7 @@
     </script>
 </body>
 </html>
+
 
 
 
