--- a/index.html
+++ b/index.html
@@ -582,6 +582,39 @@ function updateMetricCards(all) {
     const totalROI = initial > 0 ? ((currentEquity - initial) / initial) * 100 : 0;
     const maxDDMoney = (maxDD / 100) * maxEquity;
     const avgTradeROI = all.length ? totalROI / all.length : 0;
+    // ===== ROI by Time Window =====
+    const now = new Date();
+
+    function roiByFilter(filterFn) {
+        const subset = all.filter(filterFn);
+        if (!subset.length) return 0;
+
+        let equity = initial;
+        subset.forEach(t => equity += Number(t.profit || 0));
+
+        return initial > 0 ? ((equity - initial) / initial) * 100 : 0;
+    }
+    
+    // Today ROI
+    const todayROI = roiByFilter(t => {
+        const d = new Date(t.date);
+        return d.toDateString() === now.toDateString();
+    });
+
+    // 7D ROI
+    const roi7d = roiByFilter(t => {
+        const d = new Date(t.date);
+        return (now - d) <= 7 * 24 * 60 * 60 * 1000;
+    });
+
+    // Month ROI
+    const roiMonth = roiByFilter(t => {
+        const d = new Date(t.date);
+        return d.getFullYear() === now.getFullYear()
+            && d.getMonth() === now.getMonth();
+    });
+
+    
 
     // 年化收益率（安全版）
     let annualizedROI = 0;
@@ -598,6 +631,9 @@ function updateMetricCards(all) {
     const metrics = [
         { label: '账户总资产', val: '$' + currentEquity.toFixed(2), sub: 'Current Balance', cls: 'text-white' },
         { label: '累计收益率', val: totalROI.toFixed(2) + '%', sub: 'Total ROI', cls: totalROI >= 0 ? 'text-emerald-400' : 'text-rose-400' },
+        { label: 'Today 收益率', val: todayROI.toFixed(2) + '%', sub: 'Today ROI', cls: todayROI >= 0 ? 'text-emerald-400' : 'text-rose-400' },
+        { label: '7D 收益率', val: roi7d.toFixed(2) + '%', sub: 'Last 7 Days', cls: roi7d >= 0 ? 'text-emerald-400' : 'text-rose-400' },
+        { label: 'Month 收益率', val: roiMonth.toFixed(2) + '%', sub: 'This Month', cls: roiMonth >= 0 ? 'text-emerald-400' : 'text-rose-400' },
         { label: '年化收益率', val: annualizedROI.toFixed(1) + '%', sub: 'Est. APR', cls: 'text-cyan-400' },
         { label: '统计胜率', val: wr.toFixed(1) + '%', sub: winCount + 'W / ' + lossCount + 'L', cls: 'text-cyan-400' },
         { label: '盈亏系数 PF', val: pf.toFixed(2), sub: 'Profit Factor', cls: pf >= 1.5 ? 'text-emerald-400' : 'text-amber-400' },
@@ -804,6 +840,7 @@ document.getElementById('btn-logout').onclick = () => signOut(auth);
     </script>
 </body>
 </html>
+
 
 
 
