--- a/index.html
+++ b/index.html
@@ -302,6 +302,8 @@
                         </div>
                     </div>
                 </div>
+                <div id="roi-summary"></div>
+
 
                 <div class="xl:col-span-7 grid grid-cols-2 md:grid-cols-4 gap-5" id="metrics-grid"></div>
             </div>
@@ -631,9 +633,6 @@ function updateMetricCards(all) {
     const metrics = [
         { label: '账户总资产', val: '$' + currentEquity.toFixed(2), sub: 'Current Balance', cls: 'text-white' },
         { label: '累计收益率', val: totalROI.toFixed(2) + '%', sub: 'Total ROI', cls: totalROI >= 0 ? 'text-emerald-400' : 'text-rose-400' },
-        { label: 'Today 收益率', val: todayROI.toFixed(2) + '%', sub: 'Today ROI', cls: todayROI >= 0 ? 'text-emerald-400' : 'text-rose-400' },
-        { label: '7D 收益率', val: roi7d.toFixed(2) + '%', sub: 'Last 7 Days', cls: roi7d >= 0 ? 'text-emerald-400' : 'text-rose-400' },
-        { label: 'Month 收益率', val: roiMonth.toFixed(2) + '%', sub: 'This Month', cls: roiMonth >= 0 ? 'text-emerald-400' : 'text-rose-400' },
         { label: '年化收益率', val: annualizedROI.toFixed(1) + '%', sub: 'Est. APR', cls: 'text-cyan-400' },
         { label: '统计胜率', val: wr.toFixed(1) + '%', sub: winCount + 'W / ' + lossCount + 'L', cls: 'text-cyan-400' },
         { label: '盈亏系数 PF', val: pf.toFixed(2), sub: 'Profit Factor', cls: pf >= 1.5 ? 'text-emerald-400' : 'text-amber-400' },
@@ -641,6 +640,18 @@ function updateMetricCards(all) {
         { label: '单笔平均收益率', val: avgTradeROI.toFixed(2) + '%', sub: 'Avg ROI / Trade', cls: 'text-indigo-400' },
         { label: '总交易数', val: all.length, sub: 'Log Samples', cls: 'text-gray-400' }
     ];
+
+    const roiSummaryHTML =
+    '<div class="component-bg border border-white/5 rounded-2xl p-6 mb-6">' +
+        '<p class="text-[11px] uppercase text-gray-500 font-black tracking-widest mb-4">ROI Performance</p>' +
+
+        roiRow('Today', todayROI) +
+        roiRow('7D', roi7d) +
+        roiRow('Month', roiMonth) +
+        roiRow('Total', totalROI) +
+    '</div>';
+    document.getElementById('roi-summary').innerHTML = roiSummaryHTML;
+
 
     const grid = document.getElementById('metrics-grid');
     if (!grid) return;
@@ -653,6 +664,18 @@ function updateMetricCards(all) {
         '</div>'
     ).join('');
 }
+
+function roiRow(label, val) {
+    const cls = val >= 0 ? 'text-emerald-400' : 'text-rose-400';
+    const sign = val >= 0 ? '+' : '';
+    return (
+        '<div class="flex justify-between items-center py-1">' +
+            '<span class="text-xs text-gray-400 font-bold">' + label + '</span>' +
+            '<span class="text-sm font-black ' + cls + '">' + sign + val.toFixed(2) + '%</span>' +
+        '</div>'
+    );
+}
+
 
 function renderCalendar(data) {
     const monthVal = document.getElementById('calendar-month-select').value;
@@ -840,6 +863,7 @@ document.getElementById('btn-logout').onclick = () => signOut(auth);
     </script>
 </body>
 </html>
+
 
 
 
