--- a/index.html
+++ b/index.html
@@ -261,7 +261,10 @@
                     <div class="absolute top-0 right-0 w-64 h-64 bg-cyan-500/5 blur-[100px] pointer-events-none"></div>
                     <div class="flex justify-between items-center mb-8">
                         <h3 class="text-sm font-black text-gray-400 uppercase tracking-[0.3em]"><i class="fas fa-wave-square mr-3 text-cyan-500"></i>Equity Curve Analytics</h3>
-                        <div id="curve-range-label" class="text-[10px] text-cyan-400 font-black bg-cyan-500/10 px-4 py-1.5 rounded-full border border-cyan-500/20">ALL TIME VISUALIZER</div>
+                        <div class="flex bg-black/40 rounded-lg p-1 border border-white/5">
+                            <button id="chart-mode-view" class="px-3 py-1 text-[10px] font-black rounded-md text-gray-400 hover:text-white transition-all">VIEW</button>
+                            <button id="chart-mode-all" class="px-3 py-1 text-[10px] font-black rounded-md bg-cyan-500 text-black shadow-lg shadow-cyan-500/20">ALL</button>
+                        </div>
                     </div>
                     <div class="h-[380px] w-full"><canvas id="equity-chart"></canvas></div>
                 </div>
@@ -424,6 +427,7 @@ let allTrades = [];
 let config = { initialCapital: 10000, targetCapital: 20000 };
 let chartInstance = null;
 let viewMode = 'month';
+let chartMode = 'all';
 let unsubscribeTrades = null;
 
 // 初始化身份验证（支持环境自动登录）
@@ -498,7 +502,7 @@ function refreshUI() {
     updateMetricCards(allTrades);
     renderCalendar(allTrades);
     renderTradeList(filtered);
-    updateChart(allTrades, filtered);
+    updateChart(allTrades, chartMode === 'all' ? allTrades : filtered);
 }
 
 function updateGoalProgress(all) {
@@ -681,6 +685,28 @@ document.getElementById('calendar-month-select').onchange = () => { viewMode = '
 document.getElementById('search-input').oninput = refreshUI;
 document.getElementById('filter-status').onchange = refreshUI;
 
+document.getElementById('chart-mode-view').onclick = () => { 
+    chartMode = 'view'; 
+    updateChartModeUI(); 
+    refreshUI(); 
+};
+document.getElementById('chart-mode-all').onclick = () => { 
+    chartMode = 'all'; 
+    updateChartModeUI(); 
+    refreshUI(); 
+};
+
+function updateChartModeUI() {
+    const btnView = document.getElementById('chart-mode-view');
+    const btnAll = document.getElementById('chart-mode-all');
+    const activeClass = 'bg-cyan-500 text-black shadow-lg shadow-cyan-500/20';
+    const inactiveClass = 'text-gray-400 hover:text-white bg-transparent shadow-none';
+    const baseClass = 'px-3 py-1 text-[10px] font-black rounded-md transition-all';
+    
+    btnView.className = `${baseClass} ${chartMode === 'view' ? activeClass : inactiveClass}`;
+    btnAll.className = `${baseClass} ${chartMode === 'all' ? activeClass : inactiveClass}`;
+}
+
 window.openModal = () => {
     document.getElementById('trade-form').reset();
     document.getElementById('edit-id').value = "";
@@ -739,6 +765,7 @@ document.getElementById('btn-logout').onclick = () => signOut(auth);
     </script>
 </body>
 </html>
+
 
 
 
