--- a/index.html
+++ b/index.html
@@ -53,8 +53,14 @@
         .cyber-button:hover { box-shadow: 0 0 25px rgba(217, 70, 239, 0.6); transform: scale(1.02); letter-spacing: 1px; }
 
         /* 强化日志行动画 */
-        .trade-row { transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1); }
-        .trade-row:hover { background-color: rgba(26, 26, 53, 0.8); transform: translateX(12px) scale(1.005); box-shadow: -10px 0 20px -10px #d946ef; }
+        .trade-row { transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1); position: relative; }
+        .trade-row:hover { 
+            background: linear-gradient(90deg, rgba(192, 38, 211, 0.2) 0%, rgba(20, 20, 40, 0.6) 100%); 
+            transform: translateX(6px) scale(1.01); 
+            box-shadow: inset 3px 0 0 0 #d946ef, 0 10px 40px -10px rgba(192, 38, 211, 0.3);
+            z-index: 5;
+        }
+        .trade-row:hover .text-gray-400 { color: #f0abfc !important; text-shadow: 0 0 8px rgba(217, 70, 239, 0.4); }
         
         .action-icon { transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55); width: 36px; height: 36px; border-radius: 10px; background: rgba(255,255,255,0.03); }
         .action-icon:hover { transform: scale(1.3) rotate(8deg); background: rgba(217, 70, 239, 0.2); color: #d946ef; box-shadow: 0 0 15px rgba(217, 70, 239, 0.4); }
@@ -783,6 +789,7 @@ document.getElementById('btn-logout').onclick = () => signOut(auth);
     </script>
 </body>
 </html>
+
 
 
 
