--- a/index.html
+++ b/index.html
@@ -184,50 +184,79 @@
 
             <!-- 顶层：目标进度与设置 + 专业指标 -->
             <div class="grid grid-cols-1 xl:grid-cols-12 gap-8">
-                <div class="xl:col-span-5 p-8 rounded-3xl component-bg border border-purple-500/20 relative overflow-hidden shadow-2xl">
+                <div class="xl:col-span-4 p-8 rounded-3xl component-bg border border-purple-500/20 relative overflow-hidden shadow-2xl">
                     <div class="absolute -right-10 -top-10 w-40 h-40 bg-purple-500/5 blur-3xl rounded-full"></div>
                     <div class="flex items-center justify-between mb-8">
                         <span class="text-xs text-purple-400 font-black uppercase tracking-[0.25em]">Account Growth Tracker</span>
                         <i class="fas fa-radar text-gray-700"></i>
                     </div>
                     
-                    <div class="flex flex-col md:flex-row items-center gap-10">
+                    <div class="flex flex-col md:flex-row items-center gap-6">
                         <div class="relative flex items-center justify-center shrink-0 group">
                             <div class="absolute inset-0 bg-purple-500/10 blur-2xl rounded-full scale-0 group-hover:scale-110 transition-transform duration-700"></div>
-                            <svg class="progress-ring relative" width="140" height="140">
-                                <circle class="text-white/5" stroke-width="10" stroke="currentColor" fill="transparent" r="62" cx="70" cy="70"/>
-                                <circle id="goal-progress-bar" class="text-purple-400 progress-ring__circle" stroke-width="10" stroke-dasharray="389.5" stroke-dashoffset="389.5" stroke-linecap="round" stroke="currentColor" fill="transparent" r="62" cx="70" cy="70"/>
+                            <svg class="progress-ring relative" width="120" height="120">
+                                <circle class="text-white/5" stroke-width="8" stroke="currentColor" fill="transparent" r="54" cx="60" cy="60"/>
+                                <circle id="goal-progress-bar" class="text-purple-400 progress-ring__circle" stroke-width="8" stroke-dasharray="339.2" stroke-dashoffset="339.2" stroke-linecap="round" stroke="currentColor" fill="transparent" r="54" cx="60" cy="60"/>
                             </svg>
                             <div class="absolute inset-0 flex flex-col items-center justify-center">
-                                <span id="goal-percent" class="text-3xl font-black text-white tracking-tighter">0%</span>
+                                <span id="goal-percent" class="text-2xl font-black text-white tracking-tighter">0%</span>
                             </div>
                         </div>
 
-                        <div class="flex-grow w-full space-y-6">
-                            <div class="grid grid-cols-2 gap-6">
-                                <div class="space-y-2">
-                                    <label class="text-[11px] text-gray-400 uppercase font-black tracking-widest">初始资金 (Base)</label>
-                                    <div class="flex items-center bg-black/40 px-4 py-3 rounded-xl border border-white/5 focus-within:border-purple-500/50 transition-all">
-                                        <span class="text-purple-500 font-black mr-2">$</span>
-                                        <input type="number" id="initial-capital" class="bg-transparent border-none p-0 text-white font-black text-base w-full focus:ring-0" value="10000">
-                                    </div>
-                                </div>
-                                <div class="space-y-2">
-                                    <label class="text-[11px] text-gray-400 uppercase font-black tracking-widest">目标资金 (Target)</label>
-                                    <div class="flex items-center bg-black/40 px-4 py-3 rounded-xl border border-white/5 focus-within:border-purple-500/50 transition-all">
-                                        <span class="text-purple-500 font-black mr-2">$</span>
-                                        <input type="number" id="target-capital" class="bg-transparent border-none p-0 text-white font-black text-base w-full focus:ring-0" value="20000">
-                                    </div>
+                        <div class="flex-grow w-full space-y-4">
+                            <div class="space-y-2">
+                                <label class="text-[10px] text-gray-400 uppercase font-black tracking-widest">初始资金 (Base)</label>
+                                <div class="flex items-center bg-black/40 px-3 py-2 rounded-xl border border-white/5 focus-within:border-purple-500/50 transition-all">
+                                    <span class="text-purple-500 font-black mr-2 text-sm">$</span>
+                                    <input type="number" id="initial-capital" class="bg-transparent border-none p-0 text-white font-black text-sm w-full focus:ring-0" value="10000">
                                 </div>
                             </div>
-                            <div class="pt-4 border-t border-white/5">
-                                <p id="remaining-label" class="text-xs text-gray-400 italic font-medium tracking-tight">AI 正在解析目标路径...</p>
+                            <div class="space-y-2">
+                                <label class="text-[10px] text-gray-400 uppercase font-black tracking-widest">目标资金 (Target)</label>
+                                <div class="flex items-center bg-black/40 px-3 py-2 rounded-xl border border-white/5 focus-within:border-purple-500/50 transition-all">
+                                    <span class="text-purple-500 font-black mr-2 text-sm">$</span>
+                                    <input type="number" id="target-capital" class="bg-transparent border-none p-0 text-white font-black text-sm w-full focus:ring-0" value="20000">
+                                </div>
+                            </div>
+                            <div class="pt-2 border-t border-white/5">
+                                <p id="remaining-label" class="text-[10px] text-gray-400 italic font-medium tracking-tight">AI 正在解析目标路径...</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="xl:col-span-7 grid grid-cols-2 md:grid-cols-4 gap-5" id="metrics-grid"></div>
+                <!-- 新增：仓位计算器 -->
+                <div class="xl:col-span-3 p-8 rounded-3xl component-bg border border-blue-500/20 shadow-2xl flex flex-col justify-center relative overflow-hidden">
+                    <div class="absolute -left-10 -bottom-10 w-32 h-32 bg-blue-500/5 blur-3xl rounded-full"></div>
+                    <div class="flex items-center justify-between mb-6">
+                        <span class="text-xs text-blue-400 font-black uppercase tracking-[0.25em]">Position Size Calc</span>
+                        <i class="fas fa-calculator text-gray-700"></i>
+                    </div>
+                    <div class="space-y-5">
+                        <div class="space-y-2">
+                            <label class="text-[11px] text-gray-400 uppercase font-black tracking-widest">Risk Amount (风险金额)</label>
+                            <div class="flex items-center bg-black/40 px-4 py-3 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
+                                <span class="text-blue-500 font-black mr-2">$</span>
+                                <input type="number" id="calc-risk-amount" class="bg-transparent border-none p-0 text-white font-black text-base w-full focus:ring-0" placeholder="100">
+                            </div>
+                        </div>
+                        <div class="space-y-2">
+                            <label class="text-[11px] text-gray-400 uppercase font-black tracking-widest">Stop Loss % (止损幅度)</label>
+                            <div class="flex items-center bg-black/40 px-4 py-3 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
+                                <i class="fas fa-percent text-blue-500 text-xs mr-3"></i>
+                                <input type="number" id="calc-risk-percent" class="bg-transparent border-none p-0 text-white font-black text-base w-full focus:ring-0" placeholder="1.0" step="0.1">
+                            </div>
+                        </div>
+                        <div class="pt-4 border-t border-white/5">
+                            <div class="flex justify-between items-end">
+                                <span class="text-[10px] text-gray-500 uppercase font-black tracking-widest mb-1">Position Size</span>
+                                <span id="calc-result" class="text-2xl font-black text-white tracking-tight">$0.00</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="xl:col-span-5 grid grid-cols-2 gap-5" id="metrics-grid"></div>
             </div>
 
             <!-- 中间：日历与曲线 -->
